--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PRITHVI\AppData\Local\Temp\testng-eclipse--234299722\testng-customsuite.xml</span>
+                    <span>C:\Users\PRITHVI\AppData\Local\Temp\testng-eclipse--1931601062\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.Testcases.TestScenario_003" class="method navigator-link" hash-for-method="Tc_001">Tc_001</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.Testcases.TestScenario_003" class="method navigator-link" hash-for-method="Tc_022">Tc_022</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Tc_001">
-                  </a> <!-- Tc_001 -->
-                  <span class="method-name">Tc_001</span>
+                  <a name="Tc_022">
+                  </a> <!-- Tc_022 -->
+                  <span class="method-name">Tc_022</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PRITHVI\AppData\Local\Temp\testng-eclipse--234299722\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PRITHVI\AppData\Local\Temp\testng-eclipse--1931601062\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.Testcases.TestScenario_003&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;Tc_001&quot;/&gt;
+          &lt;include name=&quot;Tc_022&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.Testcases.TestScenario_003 --&gt;
     &lt;/classes&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Tc_001')
+data.setCell(0, 1, 'Tc_022')
 data.setCell(0, 2, 'com.Testcases.TestScenario_003')
-data.setCell(0, 3, 2291);
+data.setCell(0, 3, 18283);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,9 +214,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.Testcases.TestScenario_003</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">Tc_021</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -231,12 +238,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Tc_001</span>
-                <span class="method-start">7781 ms</span>
+                <span class="method-name">Tc_022</span>
+                <span class="method-start">6785 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">AfterTestcaseRun</span>
-                <span class="method-start">10077 ms</span>
+                <span class="method-start">25073 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
